--- a/account.html
+++ b/account.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tài Khoản - GameVault</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <style>
     /* Style cho modal ảnh phóng to */
     #receipt-modal {
@@ -255,7 +255,7 @@
 
   <div id="toast" class="toast" style="display: none;"></div>
 
-  <script src="js/scripts.js"></script>
+  <script src="scripts.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       const isAdmin = JSON.parse(localStorage.getItem('isAdmin') || 'false');
