--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Giỏ Hàng</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <style>
     .neon-input {
       width: 60px !important;
@@ -194,6 +194,6 @@
     </div>
   </div>
 
-  <script src="js/scripts.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
