--- a/checkout.html
+++ b/checkout.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Thanh Toán</title>
   <style>
     body { font-family: 'Orbitron', sans-serif; background: #0e1a2b; color: #fff; margin: 0; }
