--- a/manage_products.html
+++ b/manage_products.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quản Lý Sản Phẩm - GameVault</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="header">
@@ -141,7 +141,7 @@
 
   <div id="toast" class="toast" style="display: none;"></div>
 
-  <script src="js/scripts.js"></script>
+  <script src="scripts.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       if (!JSON.parse(localStorage.getItem('isAdmin') || 'false')) {
