--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chi tiết sản phẩm - GameVault</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="header">
@@ -157,6 +157,6 @@
 
   <div id="toast" class="toast"></div>
 
-  <script src="js/scripts.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
